# axum-inertia

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  inertia.toml  mise.toml
.github/workflows/: ci.yaml
benches/: page_render.rs
crates/cargo-inertia/: Cargo.toml
crates/cargo-inertia/src/: build.rs  check.rs  cli.rs  dev.rs  error.rs  framework.rs  init.rs  lib.rs  main.rs  output.rs  package_manager.rs  server_framework.rs  ssr.rs
crates/cargo-inertia/tests/: build_command.rs  generated_projects.rs
crates/inertia-actix/: Cargo.toml
crates/inertia-actix/src/: app.rs  assets.rs  boundary.rs  extract.rs  form.rs  lib.rs  middleware.rs  response.rs
crates/inertia-actix/tests/: integration.rs
crates/inertia-axum/: Cargo.toml
crates/inertia-axum-macros/: Cargo.toml
crates/inertia-axum-macros/src/: attributes.rs  form.rs  lib.rs  page.rs  props.rs  typegen.rs
crates/inertia-axum-test/: Cargo.toml
crates/inertia-axum-test/src/: page.rs  request.rs  response.rs
crates/inertia-axum-test/tests/: ssr.rs  state.rs
crates/inertia-axum-typegen/: Cargo.toml
crates/inertia-axum-typegen-spike/: Cargo.toml
crates/inertia-axum-typegen-spike/src/: lib.rs  main.rs
crates/inertia-axum-typegen/src/: lib.rs  tests.rs
crates/inertia-axum/benches/: page_render.rs  partial_async_prop_selection.rs  pending_page_finalize.rs  request_context.rs  selected_async_prop_concurrency.rs  shared_props.rs  transient_cookie_commit.rs  unselected_async_prop.rs  version_layer.rs  vite_initial_html.rs
crates/inertia-axum/src/: app.rs  assets.rs  engine.rs  form.rs  layer.rs  lib.rs  prelude.rs  response.rs  root.rs  router.rs  share.rs  typed.rs  visit.rs
crates/inertia-axum/src/axum/: error.rs  extract.rs  render.rs  shared.rs
crates/inertia-axum/src/axum/tests/: rendering.rs
crates/inertia-axum/src/axum/version/: mod.rs
crates/inertia-axum/src/html/: mod.rs
crates/inertia-axum/src/page/: draft.rs
crates/inertia-axum/src/props/: prop.rs
crates/inertia-axum/src/root/: askama.rs
crates/inertia-axum/src/ssr/: error.rs  mod.rs  node.rs  runtime.rs
crates/inertia-axum/src/transient/: cookie.rs  memory.rs  mod.rs  tower_session.rs
crates/inertia-axum/tests/: compatibility_imports.rs  direct_responses.rs  forms_validation.rs  protocol_v3.rs  ssr_config.rs  ssr_managed_node.rs  ssr_node_lifecycle.rs  ssr_policy.rs  ssr_rendering.rs  transient_flash.rs  typed_pages.rs  typed_shared.rs  typegen.rs  unified_props.rs  vite.rs
crates/inertia-axum/tests/protocol_v3/: lazy_deferred_once.rs  merge_and_scroll.rs  partial_reloads.rs  shared_props.rs  support.rs  versioning.rs
crates/inertia-core/: Cargo.toml
crates/inertia-core/src/: app.rs  assets.rs  engine.rs  lib.rs
crates/inertia-embed/: Cargo.toml
crates/inertia-embed/benches/: embedded.rs
crates/inertia-embed/macros/: Cargo.toml
crates/inertia-embed/src/: cache.rs  frontend.rs  lib.rs  request.rs
crates/inertia-embed/tests/: axum.rs  runtime.rs  trybuild.rs
crates/inertia-macros/tests/: dependency_arrangements.rs
crates/inertia-test/: Cargo.toml
crates/inertia-test/src/: adapter.rs  lib.rs
crates/inertia-test/tests/: adapter_conformance.rs
docs/: migration-from-0.5.md  package.json  performance-baseline.md  protocol-support.md  root-templates.md  ssr.md
docs/content/docs/: index.mdx  meta.json
docs/internal/: example-guidelines.md  implementation-inventory.md
docs/internal/archive/: docs-overhaul-final-audit-2026-07.md
docs/scripts/: check-links.mjs
examples/: Cargo.toml  README.md
examples/actix-embedded/: Cargo.toml  README.md
examples/actix-embedded/frontend/: package.json  pnpm-lock.yaml
examples/actix-embedded/src/: main.rs
examples/actix-minimal/: Cargo.toml  README.md
examples/actix-minimal/src/: main.rs
examples/axum-askama/: Cargo.toml  README.md
examples/axum-askama/frontend/: package-lock.json  package.json  vite.config.ts
examples/axum-askama/frontend/src/: main.ts
examples/axum-askama/frontend/src/pages/: Home.vue
examples/axum-askama/src/: main.rs  root.rs
examples/axum-embedded/: Cargo.toml  README.md
examples/axum-embedded/frontend/: package.json  vite.config.ts
examples/axum-embedded/frontend/src/: main.ts  style.css
examples/axum-embedded/src/: main.rs
examples/axum-minimal/: Cargo.toml  README.md
examples/axum-minimal/src/: main.rs
examples/axum-react/: Cargo.toml
examples/axum-react/react-app/: playwright.config.js
examples/axum-react/src/: main.rs
examples/axum-svelte/: Cargo.toml  README.md
examples/axum-svelte/src/: main.rs
examples/axum-svelte/svelte-app/: README.md  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  vite.config.js
examples/axum-svelte/tests/: production_ssr.rs
examples/axum-vue/: Cargo.toml
examples/axum-vue/src/: main.rs
examples/axum-vue/vue-app/: playwright.config.js
examples/incident-board/: Cargo.toml
examples/incident-board/src/: lib.rs
examples/observatory/: Cargo.toml
examples/observatory/src/: lib.rs
examples/rocket-embedded/src/: main.rs
examples/rocket-minimal/: Cargo.toml  README.md
examples/rocket-minimal/src/: main.rs
examples/rocket-svelte/: Cargo.toml  README.md
examples/rocket-svelte/src/: main.rs
examples/rocket-svelte/svelte-app/: README.md  package-lock.json  package.json
examples/rocket-svelte/templates/: app.html.hbs
examples/todo/: Cargo.toml
examples/todo/src/: lib.rs
scripts/: test-embedded-example.sh  test-live-ssr.sh
src/: app.rs  axum.rs  core.rs  engine.rs  form.rs  headers.rs  layer.rs  lib.rs  prelude.rs  redirect.rs  response.rs  rocket.rs
src/axum/: error.rs  extract.rs  mod.rs  render.rs  response_headers.rs  shared.rs
src/axum/tests/: mod.rs  (+5 more)
src/html/: mod.rs  serializer.rs
src/page/: builder.rs  draft.rs  metadata.rs  mod.rs  model.rs
src/props/: eager.rs  lazy.rs  mod.rs  resolver.rs
src/request/: context.rs  header_list.rs  mod.rs  selection.rs
src/shared/: merge.rs  mod.rs
src/transient/: mod.rs
tests/: forms_validation.rs  typed_shared.rs
(+126 files in other folders)
