[package]
name = "inertia-axum-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "In-process testing utilities for inertia-axum applications"

[lints]
workspace = true

[dependencies]
axum.workspace = true
inertia-axum = { workspace = true, features = ["test-support"] }
serde.workspace = true
serde_json.workspace = true
tower = { workspace = true, features = ["util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
