[package]
name = "inertia-axum-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Testing utilities for inertia-axum applications"

[lints]
workspace = true

[dependencies]
axum = { workspace = true, features = ["http1", "tokio"] }
inertia-axum = { workspace = true, features = ["test-support", "ssr"] }
serde.workspace = true
serde_json.workspace = true
tower = { workspace = true, features = ["util"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
